# JpegDecoder

./: .gitignore  CMakeLists.txt  JpegDecoder.sln  README.md  main.cpp
JpegDecoder/: JpegDecoder.vcxproj  JpegDecoder.vcxproj.filters  bit_operation.cpp  bit_operation.h  jpeg_data_structrue.cpp  jpeg_data_structrue.h  jpeg_decoder.cpp  jpeg_decoder.h  jpeg_marker_codes.h  main.cpp
src/: jpeg_data_structrue.h  jpeg_decoder.cpp  jpeg_decoder.h  jpeg_marker_codes.h
